--- a/math.css
+++ b/math.css
@@ -1,30 +1,53 @@
 h1.topic {
-	background-color: #99CCFF;
-	width: 1350px;
-	padding: 15px;
-	float: left;
-	font-family: cursive;
-	color: brown;
+    background-image: url("hb.jpg");
+    width: 1400px;
+    padding: 10px;
+    font-family: cursive;
+    color: brown;
 }
+
+body {
+    margin: 0px;
+}
+
+p {
+	padding-left: 15px;
+	font-family: fantasy;
+}
+
 
 .leftRow {
-	width: 200px;
+	padding: 20;
+	margin-top: 38px;
+	width: 150px;
 	height: 500px;
 	float: left;
-	background-color: linen;
+	background-image:url("hb.jpg");
 }
 
-.middleRow {
-	border: solid 1px black;
-	width: 1100px;
-	height: 500px;
-	margin-left: 30px;
-	padding: 30px;
-	float: left;
-
+#middleRow {
+    background-image: url("bg.jpg");
+    position: absolute;
+    left: 200;
+    top: 130px;
+    display:flex;
+    overflow:scroll;
+    border: solid 1px black;
+    width: 900px;
+    height: 300px;
+    margin-left: 30px;
+    padding: 30px 60px 30px 60px;
+    float: left;
 }
 
-.image {
-	margin: 5px 6px 5px 5px;
-	padding: 10px;
+#middleRow .image {
+
+	display: inline-block;
+	margin: 0px 40px 8px 5px;
+}
+
+img:hover {
+	opacity:0.5;
+	width:220px;
+	height:270px;
 }
