physics page created

--- a/homePage.css
+++ b/homePage.css
@@ -36,20 +36,13 @@ h1 {
 	margin-left: 200px;
 
 }
+#middle .image:hover {
+	background-color: red;
+	width: 200px;
+	height: 150px;
+}
 footer {
 	background-color: #66CCFF;
 	min-height: 160px;
 	text-align: center;
-}
-ul.social-icon {
-	margin: 0px 0px 10px 14px;
-	padding: 0;
-	width: auto; 
-}
-ul.social-icon li.facebook{
-	background-position: 0px -121px;
-	margin-right: 0px;
-}
-ul.social-icon li {
-	background-image: social.png;
 }
