--- a/math.css
+++ b/math.css
@@ -2,6 +2,7 @@ h1.topic {
     background-image: url("hb.jpg");
     width: 1400px;
     padding: 10px;
+    margin-right: 0px;
     font-family: cursive;
     color: brown;
 }
@@ -19,6 +20,7 @@ p {
 .leftRow {
 	padding: 20;
 	margin-top: 38px;
+    margin-right: 0px;
 	width: 150px;
 	height: 500px;
 	float: left;
@@ -27,27 +29,28 @@ p {
 
 #middleRow {
     background-image: url("bg.jpg");
-    position: absolute;
-    left: 200;
+    /*position: absolute;*/
+    left: 200px;
     top: 130px;
-    display:flex;
+    margin-top: 38px;
+    /*display:flex;*/
     overflow:scroll;
-    border: solid 1px black;
-    width: 900px;
-    height: 300px;
+    /*border: solid 1px black;*/
+    width: 1000px;
+    height: 600px;
     margin-left: 30px;
-    padding: 30px 60px 30px 60px;
+    /*padding: 30px 60px 30px 60px;*/
     float: left;
 }
 
 #middleRow .image {
 
-	display: inline-block;
+	/*display: inline-block;*/
 	margin: 0px 40px 8px 5px;
 }
 
-img:hover {
+/*img:hover {
 	opacity:0.5;
 	width:220px;
 	height:270px;
-}
+}*/
