--- a/math.css
+++ b/math.css
@@ -1,4 +1,5 @@
 h1.topic {
+    margin: 0px;
     background-image: url("hb.jpg");
     padding: 10px;
     margin-left: 0px;
@@ -6,14 +7,13 @@ h1.topic {
     font-family: cursive;
     color: brown;
 }
-h2.topic{
-    text-align: center;
-    background-image: url("hb.jpg");
-    font-family: cursive;
-    margin-left: 0px;
-    margin-right: 0px;
-    font-size: 30px;
+
+#image {
+    float: right;
+    padding-right: 10px;
 }
+
+
 body {
     margin: 0px;
 }
@@ -38,7 +38,7 @@ p {
     background-image: url("bg.jpg");
     position: absolute;
     left: 200px;
-    top: 150px;
+    top: 130px;
     margin-top: 1px;
     border: solid 1px black;
     width: 1100px;
