chemistry content added courses modified

--- a/math.css
+++ b/math.css
@@ -39,7 +39,7 @@ p {
     position: absolute;
     left: 200px;
     top: 150px;
-    margin-top: 1px;
+    margin-top: 26px;
     border: solid 1px black;
     width: 1100px;
     height: 600px;
@@ -58,6 +58,11 @@ img:hover {
     text-align: right;
     margin-top: 720px;
     margin-right: 20px;
+}
+li{
+    font-size: 20px;
+    padding: 10px;
+    font-family: cursive;;
 }
 
 
